Deploy cat browser app.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://KimAlnaru.github.io/cat-browser",
+  "homepage": "https://KimAlnaru.github.io/cat-browser",
   "name": "my-app",
   "version": "0.1.0",  
   "private": true,
