--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
-{  
-  "homepage": ".",
+{     
   "name": "my-app",
-  "version": "0.1.0",  
+  "version": "0.1.0",
+  "homepage": "https://kimalnaru.github.io/cat-browser",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
